tests/data/placebo/test_fsx_public_subnet/ec2.DescribeRouteTables_1.json
{
    "status_code": 200,
    "data": {
        "RouteTables": [
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0896deda6646306d5",
                        "RouteTableId": "rtb-03d73192190b04d2a",
                        "SubnetId": "subnet-0e34e32eb6267466e",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-03d73192190b04d2a",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "NatGatewayId": "nat-00658379c244b7197",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via NAT Gateway, S3 via VPC Endpoint and if VPN enabled will have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Name",
                        "Value": "PrivateRouteTable3"
                    },
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "PrivateRouteTable3"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTablePrivate3"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0f499b4437a8194c4",
                        "RouteTableId": "rtb-0d37bd8557f367303",
                        "SubnetId": "subnet-007efcb55ccd11887",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0d37bd8557f367303",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC but if VPN enabled will also have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "DataRouteTable2"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableData2"
                    },
                    {
                        "Key": "Type",
                        "Value": "Data"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "Name",
                        "Value": "DataRouteTable2"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0840923e879762247",
                        "RouteTableId": "rtb-09867f5533d766a31",
                        "SubnetId": "subnet-02a26928f6378a817",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-09867f5533d766a31",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DataRouteTable1"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC but if VPN enabled will also have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "DataRouteTable1"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "Type",
                        "Value": "Data"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableData1"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0d471bf99599a18cc",
                        "RouteTableId": "rtb-0e55c344deae91b70",
                        "SubnetId": "subnet-0d677487d771335ff",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0e55c344deae91b70",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "Type",
                        "Value": "Egress"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "Name",
                        "Value": "EgressRouteTable1"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "EgressRouteTable1"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableEgress1"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-01f83ec574ef26685",
                        "RouteTableId": "rtb-025d0052071178c45",
                        "SubnetId": "subnet-05eea38a12d203bf0",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-025d0052071178c45",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "Name",
                        "Value": "IngressRouteTable1"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Type",
                        "Value": "Ingress"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableIngress1"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "IngressRouteTable1"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-00e43d9cf35405114",
                        "RouteTableId": "rtb-004bf83eadd4eefee",
                        "SubnetId": "subnet-0f87411067bbd90ee",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-004bf83eadd4eefee",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Data"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableData3"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC but if VPN enabled will also have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "DataRouteTable3"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "Name",
                        "Value": "DataRouteTable3"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0d451e30b932f1bc8",
                        "RouteTableId": "rtb-05f90eef87df87a01",
                        "SubnetId": "subnet-058819555dfea80d9",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-05f90eef87df87a01",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "Name",
                        "Value": "EgressRouteTable2"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "Type",
                        "Value": "Egress"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableEgress2"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "EgressRouteTable2"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0e0789c31b1273ede",
                        "RouteTableId": "rtb-02cfd7f0fe7f57692",
                        "SubnetId": "subnet-034f3d20e1400bae7",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-02cfd7f0fe7f57692",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "PrivateRouteTable2"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via NAT Gateway, S3 via VPC Endpoint and if VPN enabled will have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTablePrivate2"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "PrivateRouteTable2"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0a1cdbfde201c63d1",
                        "RouteTableId": "rtb-0ec1661c2ef2d8f8f",
                        "SubnetId": "subnet-0e0494e79a1d81e89",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0ec1661c2ef2d8f8f",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "NatGatewayId": "nat-00658379c244b7197",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via NAT Gateway, S3 via VPC Endpoint and if VPN enabled will have routes to QDC/LVDC datacenters"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Name",
                        "Value": "PrivateRouteTable1"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTablePrivate1"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "PrivateRouteTable1"
                    },
                    {
                        "Key": "Type",
                        "Value": "Private"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0a5efaf0985529bb7",
                        "RouteTableId": "rtb-0418f93954485a129",
                        "SubnetId": "subnet-09f752d03bc6a15d1",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0418f93954485a129",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "EgressRouteTable3"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "Type",
                        "Value": "Egress"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "Name",
                        "Value": "EgressRouteTable3"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableEgress3"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": true,
                        "RouteTableAssociationId": "rtbassoc-01ccd655d97946d04",
                        "RouteTableId": "rtb-088e53fd398f96956",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-088e53fd398f96956",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    }
                ],
                "Tags": [],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-01b07af975d41c249",
                        "RouteTableId": "rtb-081703b666509d3c9",
                        "SubnetId": "subnet-0c13c5d9d0340ba68",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-081703b666509d3c9",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableIngress3"
                    },
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Name",
                        "Value": "IngressRouteTable3"
                    },
                    {
                        "Key": "Type",
                        "Value": "Ingress"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "IngressRouteTable3"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            },
            {
                "Associations": [
                    {
                        "Main": false,
                        "RouteTableAssociationId": "rtbassoc-0d8065fecf0f75ac6",
                        "RouteTableId": "rtb-0a8cb4a14975b6394",
                        "SubnetId": "subnet-00d00d96434b99239",
                        "AssociationState": {
                            "State": "associated"
                        }
                    }
                ],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0a8cb4a14975b6394",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/21",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    },
                    {
                        "DestinationCidrBlock": "0.0.0.0/0",
                        "GatewayId": "igw-0e9aaebf4c4d6c56b",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-00a54069",
                        "GatewayId": "vpce-053a687b0bc83badf",
                        "Origin": "CreateRoute",
                        "State": "active"
                    },
                    {
                        "DestinationPrefixListId": "pl-68a54001",
                        "GatewayId": "vpce-02567d7627a3813d3",
                        "Origin": "CreateRoute",
                        "State": "active"
                    }
                ],
                "Tags": [
                    {
                        "Key": "intuit:vpc:component:description",
                        "Value": "Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
                    },
                    {
                        "Key": "intuit:vpc:env",
                        "Value": "learning"
                    },
                    {
                        "Key": "aws:cloudformation:logical-id",
                        "Value": "RouteTableIngress2"
                    },
                    {
                        "Key": "Type",
                        "Value": "Ingress"
                    },
                    {
                        "Key": "aws:cloudformation:stack-name",
                        "Value": "Intuit-vpc-1-RouteTable-XSWL3F26MGTO"
                    },
                    {
                        "Key": "intuit:vpc:component:name",
                        "Value": "IngressRouteTable2"
                    },
                    {
                        "Key": "intuit:vpc:component:type",
                        "Value": "route"
                    },
                    {
                        "Key": "aws:cloudformation:stack-id",
                        "Value": "arn:aws:cloudformation:us-west-2:644160558196:stack/Intuit-vpc-1-RouteTable-XSWL3F26MGTO/ff711940-dfcb-11ec-aa58-02901ec18915"
                    },
                    {
                        "Key": "intuit:cfn:version",
                        "Value": "2.7.8"
                    },
                    {
                        "Key": "Name",
                        "Value": "IngressRouteTable2"
                    }
                ],
                "VpcId": "vpc-0848662b041928e4e",
                "OwnerId": "644160558196"
            }
        ],
        "ResponseMetadata": {}
    }
}
